--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "ts-node",
-    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123"
+    "mock:server": "json-server ./mock/mock-server-data.json --port 3123"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
@@ -23,7 +23,7 @@
     "@typescript-eslint/parser": "5.46.0",
     "eslint": "^8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
-    "json-server": "^0.17.1",
+    "json-server": "^0.17.3",
     "rimraf": "3.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
@@ -36,6 +36,6 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "dayjs": "^1.11.7",
-    "got": "^13.0.0"
+    "got": "^12.0.0"
   }
 }
