--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node ./dist/main.js",
+    "start:dev": "npm run ts ./src/main.ts | pino-pretty --colorize --translateTime SYS:standard",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -18,12 +19,16 @@
     "mock:server": "json-server ./mock/mock-server-data.json --port 3123"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.2",
+    "@types/convict-format-with-validator": "^6.0.2",
     "@types/node": "18.16.3",
     "@typescript-eslint/eslint-plugin": "5.46.0",
     "@typescript-eslint/parser": "5.46.0",
+    "convict-format-with-validator": "^6.2.0",
     "eslint": "^8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "^0.17.3",
+    "pino-pretty": "9.1.1",
     "rimraf": "3.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
@@ -35,7 +40,12 @@
   },
   "dependencies": {
     "chalk": "^5.2.0",
+    "convict": "^6.2.3",
     "dayjs": "^1.11.7",
-    "got": "^12.0.0"
+    "dotenv": "^16.0.3",
+    "got": "^12.0.0",
+    "inversify": "^6.0.1",
+    "pino": "^8.7.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
