--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.13.2",
     "chalk": "^5.2.0",
     "convict": "^6.2.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "got": "^12.0.0",
     "inversify": "^6.0.1",
+    "mongoose": "^6.7.2",
     "pino": "^8.7.0",
     "reflect-metadata": "^0.1.13"
   }
